# rust-api

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  oidc.rs
src/database/: dynamic_table.rs  mango.rs  mod.rs
src/database/entity/: meta_column.rs  meta_table.rs  mod.rs
src/endpoint/: mod.rs
src/endpoint/middleware/: bearer_token.rs  mod.rs
src/endpoint/route/: auth.rs  mod.rs
src/middleware/: jwt.rs
src/oidc/: mod.rs  route.rs
src/policy/: mod.rs  route.rs
src/route/: mod.rs
