[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.28"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
