[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-api"
path = "src/main.rs"

[dependencies]
actix-web = "4.12.0"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.28"
openidconnect = "4.0.1"
reqwest = { version = "0.12", features = [ "json"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
url = "2.5.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
